--- a/grafana-values.yml
+++ b/grafana-values.yml
@@ -128,7 +128,7 @@ extraExposePorts: []
  #   targetPort: 8080
  #   type: ClusterIP
 
-ingress:
+**ingress:
   enabled: true
   annotations:
     kubernetes.io/ingress.class: "nginx"
@@ -137,7 +137,7 @@ ingress:
 
   path: /grafana/?(.*)
   hosts:
-    - ""
+    - ""**
 
   ## Extra paths to prepend to every host configuration. This is useful when working with annotation based services.
   extraPaths: []
